# algorithms

./: .gitignore  CMakeLists.txt  CRC comparison.txt  README.md
BASE64/: CMakeLists.txt  base64.c  base64.h  test.c  testbase64.c
CHECKSUM_8/: CMakeLists.txt  checksum8.c  checksum8.h  test.c
CRC/: CMakeLists.txt  crc.c  crc.h  test.c
XTEA/: CMakeLists.txt  XTEA.c  XTEA.h  test.c
checksum_8/: checksum.c  checksum.h
docs/: CRC algorithms.xlsx  crc_integration.md
include/AES/: AES128.h  AES192.h  AES256.h  AES_common.h
include/BASE64/: base64.h
include/CHECKSUM8/: checksum8.h
include/CRC/: README.md  crc.h
include/PKCS7/: PKCS7.h
include/SHA1/: SHA1.h
include/XTEA/: XTEA.h
src/: CMakeLists.txt
src/AES/: AES.c  AES.h  AES128.c  AES128.cpp  AES128.h  AES192.c  AES192.h  AES256.c  AES256.h  AES_common.c  AES_common.h  CMakeLists.txt
src/BASE64/: CMakeLists.txt  base64.c  base64.h
src/CHECKSUM8/: checksum8.c  checksum8.h
src/CRC/: crc.c  crc.h
src/PKCS7/: PKCS7.c  PKCS7.h
src/SHA1/: SHA1.c  SHA1.h
src/SHA256/: SHA256.c  SHA256.h
src/STRING/: string_custom.c  string_custom.h
src/XTEA/: XTEA.c  XTEA.h
tests/: CMakeLists.txt  generate_test_binaries.py  minunit.h  test_utils.c  test_utils.h
tests/AES/: AES_test.py  AEStest.py  AEStestECB.py  CMakeLists.txt  aes_test_data.h  test.c  test_AES128_CBC.c  test_AES128_CBC_OO.cpp  test_AES128_ECB.c  test_AES192_CBC.c  test_AES192_ECB.c  test_AES256_CBC.c  test_AES256_ECB.c
tests/AES/legacy_tests/: legacy_test_AES128_CBC.c  legacy_test_AES128_ECB.c  legacy_test_AES192_CBC.c  legacy_test_AES192_ECB.c  legacy_test_AES256_CBC.c  legacy_test_AES256_ECB.c
tests/BASE64/: CMakeLists.txt  test.c  test_BASE64.c
tests/BASE64/legacy_tests/: tester_BASE64_1.c  tester_BASE64_2.c
tests/CHECKSUM8/: CMakeLists.txt  test.c  test_CHECKSUM8_2COMPLEMENT.c  test_CHECKSUM8_MODULO256.c  test_CHECKSUM8_XOR.c  test_checksum8_modulo256.c
tests/CHECKSUM8/legacy_tests/: test_checksum8_2scomplement.c  test_checksum8_modulo256.c  test_checksum8_xor.c
tests/CRC/: CMakeLists.txt  test.c  test_CRC16.c  test_CRC32.c  test_CRC8.c
tests/CRC/CRC16/: CMakeLists.txt  crc16_test_data.h  crc16_variants.h  test_CRC16_generic.c  test_CRC16_validation.c
tests/CRC/CRC32/: CMakeLists.txt  crc32_test_data.h  crc32_variants.h  test_CRC32_generic.c  test_CRC32_validation.c
tests/CRC/CRC8/: CMakeLists.txt  crc8_test_data.h  crc8_variants.h  test_CRC8_CCITT_LOOKUP.c  test_CRC8_CCITT_NO_LOOKUP.c  test_CRC8_CDMA2000_LOOKUP.c  test_CRC8_CDMA2000_NO_LOOKUP.c  test_CRC8_DARC_LOOKUP.c  test_CRC8_DARC_NO_LOOKUP.c  test_CRC8_DVBS2_LOOKUP.c  test_CRC8_DVBS2_NO_LOOKUP.c  test_CRC8_EBU_LOOKUP.c  test_CRC8_EBU_NO_LOOKUP.c  test_CRC8_MAXIM_LOOKUP.c  test_CRC8_MAXIM_NO_LOOKUP.c  test_CRC8_generic.c  test_CRC8_validation.c
tests/CRC/legacy_tests/: test_CRC16.c  test_CRC32.c  test_CRC8.c
tests/PKCS7/: CMakeLists.txt  test.c
tests/PKCS7/legacy_tests/: test_10_128.c  test_1_128.c  test_2_128.c  test_5_256.c
tests/SHA1/: CMakeLists.txt  SHA1_test.py  test.c  testSHA1_3.c
tests/SHA1/legacy_tests/: testSHA1_1.c  testSHA1_2.c
tests/SHA256/: CMakeLists.txt  SHA256_test.py  testSHA256_2.c
tests/SHA256/legacy_tests/: testSHA256_1.c  testSHA256_3.c
tests/STRING/: CMakeLists.txt  test_indexOf.c  test_validate_hex.c  test_validate_int.c
tests/XTEA/: CMakeLists.txt  test.c  test_XTEA_CBC_128rounds.c  test_XTEA_CBC_16rounds.c  test_XTEA_CBC_32rounds.c  test_XTEA_CBC_64rounds.c  test_XTEA_CBC_8rounds.c  test_XTEA_ECB_16rounds.c  test_XTEA_ECB_32rounds.c  test_XTEA_ECB_64rounds.c  test_XTEA_ECB_8rounds.c
tests/XTEA/legacy_tests/: test_XTEA_CBC_16rounds.c  test_XTEA_CBC_64rounds.c  test_XTEA_CBC_8rounds.c  test_XTEA_ECB_128rounds.c  test_XTEA_ECB_16rounds.c  test_XTEA_ECB_32rounds.c  test_XTEA_ECB_64rounds.c
